--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://mernbackend-p7f6.onrender.com/"
+  "proxy": "https://mernbackend-p7f6.onrender.com"
 }
